--- a/Coba_aja_si.ipynb
+++ b/Coba_aja_si.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxtfWq2ClvidzpS40+MHAa",
+      "authorship_tag": "ABX9TyNkSA82bpe1mzIBJjqMRYhv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-HcouVD1fOv3",
-        "outputId": "27bba9e0-07b4-4c0b-cef0-244f8b355e67"
+        "outputId": "113fcb20-b32c-43bf-cce9-495064826827"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world\n"
+            "hello world123\n"
           ]
         }
       ],
       "source": [
-        "print('hello world')"
+        "print('hello world123')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('hello')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OavJ-2W5gDDs",
+        "outputId": "95ac98f7-a477-4e58-a4c2-eb878043237f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
       ]
     }
   ]
